--- a/index.html
+++ b/index.html
@@ -7,10 +7,71 @@
   </head>
   <body>
     <div class="container">
-      <div class="jumbotron">Train Times</div>
-      <div id="train-times"></div>
 
-    </div>
+      <!-- jumbotron -->
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="jumbotron"><h1 class='text-center'>Train Times</h1></div>
+        </div>
+      </div>
+
+      <!-- train time panel -->
+      <div class="row">
+        <div class="col-md-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Current Schedule</h3>
+            </div>
+            <div id='train-times' class="panel-body">
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Add Train</h3>
+            </div>
+            <div class="panel-body">
+              <form>
+                <!-- train name -->
+                <div class="form-group">
+                  <label for="train-name">Train Name</label>
+                  <input type="text" class="form-control" id="train-name" placeholder="">
+                </div>
+
+                <!-- destination -->
+                <div class="form-group">
+                  <label for="destination">Destination</label>
+                  <input type="text" class="form-control" id="destination" placeholder="">
+                </div>
+
+                <!-- first train time -->
+                <div class="form-group">
+                  <label for="first-train-time">First Train Time (HH:mm - military time) </label>
+                  <input type="text" class="form-control" id="first-train" placeholder="">
+                </div>
+
+                <!-- frequency -->
+                <div class="form-group">
+                  <label for="frequency">Frequency</label>
+                  <input type="text" class="form-control" id="frequency" placeholder="">
+                </div>
+
+                <button type="submit" name="button" id='submit' class='btn btn-primary'>Submit</button>
+              </form>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    </div> <!-- end of container div-->
+
     <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
     <script src="https://momentjs.com/downloads/moment.js"></script>
     <script src="./assets/js/app.js"></script>
